Wiki/a_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki-ns
  namespace: wiki-ns
spec: {}
status: {}
