Wiki/wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.not-kompose.service: wikijs
  name: wikijs-service
  namespace: wiki-ns
spec:
  ports:
    - name: 'web'
      port: 82
      targetPort: 3000
  selector:
    io.not-kompose.service: wikijs
  type: ClusterIP
