Wiki/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: wiki-ns
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-cors@kubernetescrd,default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: wiki.k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs-service
                port:
                  number: 82
